implementation of delete user (admin/client), list all users (admin/client)
