# app/static/swagger.yaml
@@ -24,16 +24,16 @@ security:
   - Bearer: []
 
 paths:
-  /auth/register:
+  /auth/register/admin:
     post:
       tags:
         - "Auth"
-      summary: "Register a new user"
-      description: "Register a new user by providing a username, email, and password."
+      summary: "Register a new admin"
+      description: "Register a new admin user by providing a username, email, and password."
       parameters:
         - in: "body"
           name: "body"
-          description: "User registration details"
+          description: "Admin registration details"
           required: true
           schema:
             type: "object"
@@ -44,29 +44,62 @@ paths:
             properties:
               username:
                 type: "string"
-                description: "Username for the new user"
+                description: "Username for the new admin"
               email:
                 type: "string"
-                description: "Email address of the new user"
+                description: "Email address of the new admin"
               password:
                 type: "string"
-                description: "Password for the new user"
+                description: "Password for the new admin"
       responses:
         201:
-          description: "User created successfully"
+          description: "Admin user created successfully"
         400:
-          description: "User already exists or invalid input"
+          description: "Admin user already exists or invalid input"
 
-  /auth/login:
+  /auth/register/client:
     post:
       tags:
         - "Auth"
-      summary: "Login a user"
-      description: "Authenticate a user by providing email and password."
+      summary: "Register a new client"
+      description: "Register a new client user by providing a username, email, and password."
       parameters:
         - in: "body"
           name: "body"
-          description: "User login details"
+          description: "Client registration details"
+          required: true
+          schema:
+            type: "object"
+            required:
+              - username
+              - email
+              - password
+            properties:
+              username:
+                type: "string"
+                description: "Username for the new client"
+              email:
+                type: "string"
+                description: "Email address of the new client"
+              password:
+                type: "string"
+                description: "Password for the new client"
+      responses:
+        201:
+          description: "Client user created successfully"
+        400:
+          description: "Client user already exists or invalid input"
+
+  /auth/login/admin:
+    post:
+      tags:
+        - "Auth"
+      summary: "Login an admin"
+      description: "Authenticate an admin user by providing email and password."
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Admin login details"
           required: true
           schema:
             type: "object"
@@ -76,16 +109,145 @@ paths:
             properties:
               email:
                 type: "string"
-                description: "Email address of the user"
+                description: "Email address of the admin"
               password:
                 type: "string"
-                description: "Password of the user"
+                description: "Password of the admin"
       responses:
         200:
-          description: "User logged in successfully"
+          description: "Admin logged in successfully"
         401:
           description: "Invalid credentials"
 
+  /auth/login/client:
+    post:
+      tags:
+        - "Auth"
+      summary: "Login a client"
+      description: "Authenticate a client user by providing email and password."
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Client login details"
+          required: true
+          schema:
+            type: "object"
+            required:
+              - email
+              - password
+            properties:
+              email:
+                type: "string"
+                description: "Email address of the client"
+              password:
+                type: "string"
+                description: "Password of the client"
+      responses:
+        200:
+          description: "Client logged in successfully"
+        401:
+          description: "Invalid credentials"
+
+  /auth/delete/admin/{user_id}:
+    delete:
+      tags:
+        - "Auth"
+      summary: "Delete an admin user"
+      description: "Allows an admin to delete another admin user by providing the user ID."
+      parameters:
+        - in: "path"
+          name: "user_id"
+          description: "ID of the admin user to delete"
+          required: true
+          type: "integer"
+      security:
+        - Bearer: []  # Require Bearer token for this endpoint
+      responses:
+        200:
+          description: "Admin account deleted successfully"
+        404:
+          description: "User not found"
+        403:
+          description: "Access forbidden: Admins only"
+
+  /auth/delete/client/{user_id}:
+    delete:
+      tags:
+        - "Auth"
+      summary: "Delete a client user"
+      description: "Allows an admin to delete a client user by providing the user ID."
+      parameters:
+        - in: "path"
+          name: "user_id"
+          description: "ID of the client user to delete"
+          required: true
+          type: "integer"
+      security:
+        - Bearer: []  # Require Bearer token for this endpoint
+      responses:
+        200:
+          description: "Client account deleted successfully"
+        404:
+          description: "User not found"
+        403:
+          description: "Access forbidden: Admins only"
+
+  /auth/users/admin:
+    get:
+      tags:
+        - "Auth"
+      summary: "List all admin users"
+      description: "Retrieve a list of all admin users."
+      security:
+        - Bearer: []  # Require Bearer token for this endpoint
+      responses:
+        200:
+          description: "A list of admin users"
+          schema:
+            type: "array"
+            items:
+              type: "object"
+              properties:
+                id:
+                  type: "integer"
+                  description: "ID of the admin user"
+                username:
+                  type: "string"
+                  description: "Username of the admin user"
+                email:
+                  type: "string"
+                  description: "Email address of the admin user"
+        403:
+          description: "Access forbidden: Admins only"
+
+  /auth/users/client:
+    get:
+      tags:
+        - "Auth"
+      summary: "List all client users"
+      description: "Retrieve a list of all client users."
+      security:
+        - Bearer: []  # Require Bearer token for this endpoint
+      responses:
+        200:
+          description: "A list of client users"
+          schema:
+            type: "array"
+            items:
+              type: "object"
+              properties:
+                id:
+                  type: "integer"
+                  description: "ID of the client user"
+                username:
+                  type: "string"
+                  description: "Username of the client user"
+                email:
+                  type: "string"
+                  description: "Email address of the client user"
+        403:
+          description: "Access forbidden: Admins only"
+          
   /products/:
     get:
       tags:
@@ -101,6 +263,7 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Product"
+      x-role: "admin"  # Custom field to indicate this endpoint requires admin role
 
     post:
       tags:
@@ -121,6 +284,7 @@ paths:
           description: "Product created successfully"
         400:
           description: "Invalid input"
+      x-role: "admin"  # Custom field to indicate this endpoint requires admin role
 
   /products/{product_id}:
     get:
@@ -143,6 +307,7 @@ paths:
             $ref: "#/definitions/Product"
         404:
           description: "Product not found"
+      x-role: "admin"  # Custom field to indicate this endpoint requires admin role
 
     put:
       tags:
@@ -168,6 +333,7 @@ paths:
           description: "Product updated successfully"
         404:
           description: "Product not found"
+      x-role: "admin"  # Custom field to indicate this endpoint requires admin role
 
     delete:
       tags:
@@ -187,6 +353,7 @@ paths:
           description: "Product deleted successfully"
         404:
           description: "Product not found"
+      x-role: "admin"  # Custom field to indicate this endpoint requires admin role
 
   /orders/:
     get:
@@ -203,6 +370,7 @@ paths:
             type: "array"
             items:
               $ref: "#/definitions/Order"
+      x-role: "client"  # Custom field to indicate this endpoint requires client role
 
     post:
       tags:
@@ -217,13 +385,8 @@ paths:
           schema:
             type: "object"
             required:
-              - total_price
               - products
             properties:
-              total_price:
-                type: "number"
-                format: "float"
-                description: "Total price of the order"
               products:
                 type: "array"
                 description: "List of products in the order"
@@ -247,6 +410,7 @@ paths:
           description: "Order created successfully"
         400:
           description: "Invalid input"
+      x-role: "client"  # Custom field to indicate this endpoint requires client role
 
   /orders/{order_id}:
     get:
@@ -269,6 +433,7 @@ paths:
             $ref: "#/definitions/Order"
         404:
           description: "Order not found"
+      x-role: "client"  # Custom field to indicate this endpoint requires client role
 
     put:
       tags:
@@ -286,7 +451,11 @@ paths:
           description: "Updated order details"
           required: true
           schema:
-            $ref: "#/definitions/Order"
+            type: "object"
+            properties:
+              status:
+                type: "string"
+                description: "Updated status of the order"
       security:
         - Bearer: []  # Require Bearer token for this endpoint
       responses:
@@ -294,6 +463,7 @@ paths:
           description: "Order updated successfully"
         404:
           description: "Order not found"
+      x-role: "client"  # Custom field to indicate this endpoint requires client role
 
     delete:
       tags:
@@ -313,6 +483,7 @@ paths:
           description: "Order deleted successfully"
         404:
           description: "Order not found"
+      x-role: "client"  # Custom field to indicate this endpoint requires client role
 
 definitions:
   Product:
